--- a/index.html
+++ b/index.html
@@ -183,46 +183,155 @@
 
             <!-- Associate Dashboard (Hidden by default) -->
             <div class="associate-dashboard" id="associateDashboard" style="display: none;">
-                <div class="dashboard-header">
-                    <h3><i class="fas fa-tachometer-alt"></i> Associate Dashboard</h3>
-                    <div class="dashboard-stats">
-                        <div class="stat-item">
-                            <i class="fas fa-boxes"></i>
-                            <span>Low Stock: <span id="lowStockCount">12</span></span>
+                <!-- Store Information Header -->
+                <div class="store-info-header">
+                    <div class="store-location">
+                        <i class="fas fa-store"></i>
+                        <div class="location-details">
+                            <span class="store-address">74 EAST MAIN STREET</span>
+                            <span class="store-hours">Closes 10PM</span>
                         </div>
-                        <div class="stat-item">
-                            <i class="fas fa-exclamation-triangle"></i>
-                            <span>Alerts: <span id="alertCount">5</span></span>
-                        </div>
+                    </div>
+                    <div class="store-status">
+                        <div class="status-indicator online"></div>
+                        <span>Store Open</span>
                     </div>
                 </div>
-                
+
+                <!-- Service Navigation Bar -->
+                <div class="service-nav">
+                    <div class="service-nav-item active" onclick="switchServiceTab('dashboard')">
+                        <i class="fas fa-tachometer-alt"></i>
+                        <span>Dashboard</span>
+                    </div>
+                    <div class="service-nav-item" onclick="switchServiceTab('inventory')">
+                        <i class="fas fa-boxes"></i>
+                        <span>Inventory</span>
+                    </div>
+                    <div class="service-nav-item" onclick="switchServiceTab('planogram')">
+                        <i class="fas fa-th-large"></i>
+                        <span>Planogram</span>
+                    </div>
+                    <div class="service-nav-item" onclick="switchServiceTab('reports')">
+                        <i class="fas fa-chart-bar"></i>
+                        <span>Reports</span>
+                    </div>
+                    <div class="service-nav-item" onclick="switchServiceTab('tasks')">
+                        <i class="fas fa-tasks"></i>
+                        <span>Tasks</span>
+                    </div>
+                </div>
+
+                <!-- Main Dashboard Content -->
                 <div class="dashboard-content">
-                    <div class="dashboard-section">
-                        <h4><i class="fas fa-clipboard-list"></i> Today's Tasks</h4>
-                        <div class="task-list" id="taskList">
-                            <!-- Tasks will be populated here -->
+                    <!-- Quick Stats Banner -->
+                    <div class="stats-banner">
+                        <div class="stat-card">
+                            <div class="stat-icon">
+                                <i class="fas fa-exclamation-triangle"></i>
+                            </div>
+                            <div class="stat-info">
+                                <span class="stat-number" id="lowStockCount">12</span>
+                                <span class="stat-label">Low Stock Items</span>
+                            </div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-icon">
+                                <i class="fas fa-clock"></i>
+                            </div>
+                            <div class="stat-info">
+                                <span class="stat-number" id="pendingTasks">8</span>
+                                <span class="stat-label">Pending Tasks</span>
+                            </div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-icon">
+                                <i class="fas fa-chart-line"></i>
+                            </div>
+                            <div class="stat-info">
+                                <span class="stat-number">$2.4K</span>
+                                <span class="stat-label">Today's Sales</span>
+                            </div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <div class="stat-info">
+                                <span class="stat-number">47</span>
+                                <span class="stat-label">Customers Served</span>
+                            </div>
                         </div>
                     </div>
-                    
-                    <div class="dashboard-section">
-                        <h4><i class="fas fa-chart-line"></i> Quick Reports</h4>
-                        <div class="report-cards">
-                            <div class="report-card" onclick="generateReport('inventory')">
-                                <i class="fas fa-boxes"></i>
-                                <h5>Inventory Report</h5>
-                                <p>Check stock levels</p>
+
+                    <!-- Priority Alerts Section -->
+                    <div class="priority-section">
+                        <div class="section-header">
+                            <h3><i class="fas fa-bell"></i> Priority Alerts</h3>
+                            <span class="alert-count" id="alertCount">5</span>
+                        </div>
+                        <div class="alert-cards" id="alertCards">
+                            <!-- Alerts will be populated here -->
+                        </div>
+                    </div>
+
+                    <!-- Quick Actions Grid -->
+                    <div class="quick-actions-section">
+                        <h3>Quick Actions</h3>
+                        <div class="quick-actions-grid">
+                            <div class="action-card" onclick="handleAssociateAction('inventory-check')">
+                                <div class="action-icon">
+                                    <i class="fas fa-clipboard-check"></i>
+                                </div>
+                                <h4>Inventory Check</h4>
+                                <p>Scan and verify stock levels</p>
                             </div>
-                            <div class="report-card" onclick="generateReport('planogram')">
-                                <i class="fas fa-th-large"></i>
-                                <h5>Planogram Status</h5>
-                                <p>Verify shelf layouts</p>
+                            <div class="action-card" onclick="handleAssociateAction('planogram-verify')">
+                                <div class="action-icon">
+                                    <i class="fas fa-th-large"></i>
+                                </div>
+                                <h4>Planogram Verify</h4>
+                                <p>Check shelf layouts and compliance</p>
                             </div>
-                            <div class="report-card" onclick="generateReport('sales')">
-                                <i class="fas fa-chart-bar"></i>
-                                <h5>Sales Analytics</h5>
-                                <p>View performance data</p>
+                            <div class="action-card" onclick="handleAssociateAction('restock-alert')">
+                                <div class="action-icon">
+                                    <i class="fas fa-box-open"></i>
+                                </div>
+                                <h4>Restock Items</h4>
+                                <p>Process restock requests</p>
                             </div>
+                            <div class="action-card" onclick="handleAssociateAction('aisle-audit')">
+                                <div class="action-icon">
+                                    <i class="fas fa-map-marked-alt"></i>
+                                </div>
+                                <h4>Aisle Audit</h4>
+                                <p>Conduct aisle inspections</p>
+                            </div>
+                            <div class="action-card" onclick="handleAssociateAction('product-location')">
+                                <div class="action-icon">
+                                    <i class="fas fa-map-pin"></i>
+                                </div>
+                                <h4>Product Location</h4>
+                                <p>Find and update product locations</p>
+                            </div>
+                            <div class="action-card" onclick="handleAssociateAction('reports')">
+                                <div class="action-icon">
+                                    <i class="fas fa-file-alt"></i>
+                                </div>
+                                <h4>Generate Reports</h4>
+                                <p>Create and view store reports</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Today's Tasks Section -->
+                    <div class="tasks-section">
+                        <div class="section-header">
+                            <h3><i class="fas fa-clipboard-list"></i> Today's Tasks</h3>
+                            <span class="task-count">8 tasks remaining</span>
+                        </div>
+                        <div class="task-list" id="taskList">
+                            <!-- Tasks will be populated here -->
                         </div>
                     </div>
                 </div>
